--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,6 +19,12 @@
   </div>
 
   <div class="field">
+    <%= f.label :pronouns %><br />
+    <%= f.text_field :pronouns %>
+    <p class="help-text">Which pronouns you'd like us to use for you out-of-character.</p>
+  </div>
+
+  <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "off" %>
     <% if @minimum_password_length %>
