--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,12 @@
   </div>
 
   <div class="field">
+    <%= f.label :pronouns %><br />
+    <%= f.text_field :pronouns %>
+    <p class="help-text">Which pronouns you'd like us to use for you out-of-character.</p>
+  </div>
+
+  <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
