--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,10 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
  *= require_self
  */
+@import "_variables.scss";
+@import "_fonts.scss";
+@import "_base.scss";
+@import "_buttons.scss";
+@import "_header.scss";
