--- a/app/views/characters/edit.slim
+++ b/app/views/characters/edit.slim
@@ -1,6 +1,6 @@
 h2
   = "Edit Character: #{@character.name}"
 
-= form_for @character, url: {action: 'update'} do |f|
+= form_for @character, method: 'PATCH' do |f|
   = f.hidden_field :id
   = render partial: 'form', locals: {f: f}
