unfuck login + route to dashboard

--- a/app/assets/stylesheets/_buttons.scss
+++ b/app/assets/stylesheets/_buttons.scss
@@ -7,6 +7,10 @@
   box-shadow: 2px 2px 2px rgba(0,0,0,.25);
   -moz-box-shadow: 2px 2px 2px rgba(0,0,0,.25);
   -webkit-box-shadow: 2px 2px 2px rgba(0,0,0,.25);
+  border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  text-decoration: none;
   font-weight: bold;
 
   &:hover, &:focus {
