Add markup for programmatically displaying attributes/skills/trainings/etc

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -15,3 +15,18 @@ a {
   text-decoration: underline;
   transition: .5s;
 }
+
+.flex-container {
+  display: flex;
+  align-items: stretch;
+
+  .column {
+    flex-grow: 1;
+
+    .row {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+  }
+}
