--- a/app/views/characters/_form.slim
+++ b/app/views/characters/_form.slim
@@ -9,185 +9,39 @@
 
 h3 Attributes
 
-table#attributes_table width="100%"
-  thead
-    th
-    th Mental
-    th
-    th Physical
-    th
-    th Social
-    th
-  tr
-    th Power
-    td
-      | Intelligence
-    td
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :intelligence, "1", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :intelligence, "2", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :intelligence, "3", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :intelligence, "4", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :intelligence, "5", label: false
-    td
-      | Strength
-    td
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :strength, "1", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :strength, "2", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :strength, "3", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :strength, "4", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :strength, "5", label: false
-    td
-      | Presence
-    td
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :presence, "1", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :presence, "2", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :presence, "3", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :presence, "4", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :presence, "5", label: false
-  tr
-    th Finesse
-    td
-      | Wits
-    td
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :wits, "1", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :wits, "2", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :wits, "3", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :wits, "4", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :wits, "5", label: false
-    td
-      | Dexterity
-    td
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :dexterity, "1", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :dexterity, "2", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :dexterity, "3", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :dexterity, "4", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :dexterity, "5", label: false
-    td
-      | Manipulation
-    td
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :manipulation, "1", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :manipulation, "2", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :manipulation, "3", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :manipulation, "4", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :manipulation, "5", label: false
-  tr
-    th Resistance
-    td
-      | Resolve
-    td
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :resolve, "1", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :resolve, "2", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :resolve, "3", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :resolve, "4", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :resolve, "5", label: false
-    td
-      | Stamina
-    td
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :stamina, "1", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :stamina, "2", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :stamina, "3", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :stamina, "4", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :stamina, "5", label: false
-    td
-      | Composure
-    td
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :composure, "1", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :composure, "2", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :composure, "3", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :composure, "4", label: false
-      span.dot
-        <i class="fa fa-circle-o"></i>
-        = f.radio_button :composure, "5", label: false
+.flex-container
+  - @attributes.each do |cat,vals|
+    .column
+      strong
+        = cat
+      - vals.each do |val|
+        .row
+          label
+            = val
+          .dots
+            - (1..5).each do |i|
+              span.dot
+                = icon 'circle-o'
+                = f.radio_button val.parameterize("_").to_sym, i, label: false
 
 h3 Skills and Special Training
+
+.flex-container
+  - @skills_training.each do |cat,vals|
+    .column
+      strong
+        = cat
+      - vals.each do |val|
+        .row
+          label
+            = val
+          .dots
+            span.reset
+              = icon 'dot-circle-o'
+            - (1..5).each do |i|
+              span.dot
+                = icon 'circle-o'
+                = f.radio_button val.parameterize("_").to_sym, i, label: false
 
 h3 Advantages
 
