start implementing API; implement more character routes and views

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -16,6 +16,12 @@ a {
   transition: .5s;
 }
 
+input[type="button"],
+input[type="submit"],
+button {
+  transition: .5s;
+}
+
 .flex-container {
   display: flex;
   align-items: stretch;
