--- a/app/views/characters/show.slim
+++ b/app/views/characters/show.slim
@@ -75,3 +75,23 @@ ul#advantages
         = cha.challenge.description
 
 h3 Derived Stats
+
+p.willpower
+  strong Willpower:
+  = @character.willpower
+
+p.health
+  strong Health:
+  = @character.health
+
+p.initiative
+  strong Initiative:
+  = @character.initiative
+
+p.defense
+  strong Defense: 
+  = @character.defense
+
+p.speed
+  strong Speed:
+  = @character.speed
