--- a/app/assets/stylesheets/_buttons.scss
+++ b/app/assets/stylesheets/_buttons.scss
@@ -1,4 +1,4 @@
-.button {
+.button, input[type="submit"] {
   background-color: $green;
   color: $white;
   border: 3px $green solid;
@@ -7,11 +7,13 @@
   box-shadow: 2px 2px 2px rgba(0,0,0,.25);
   -moz-box-shadow: 2px 2px 2px rgba(0,0,0,.25);
   -webkit-box-shadow: 2px 2px 2px rgba(0,0,0,.25);
-  border-radius: 3px;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
   text-decoration: none;
   font-weight: bold;
+  font-size: 16px;
+  min-width: 100px;
 
   &:hover, &:focus {
     color: $green;
