Tweak some database fields, add forms for challenge data entry, fix issue with some fields not being permitted for save on character

--- a/app/views/data_entry/advantages/index.slim
+++ b/app/views/data_entry/advantages/index.slim
@@ -2,11 +2,11 @@ h2 Advantages
 
 = link_to "New Advantage", new_data_entry_advantage_path, class: 'button'
 
-- if @advantages
+- if @advantages.present?
   table
     thead
       tr
-        th name
+        th Name
         th
         th
     tbody
