--- a/app/views/characters/_form.slim
+++ b/app/views/characters/_form.slim
@@ -2,6 +2,9 @@
   = f.label :name
   = f.text_field :name
 .form-row
+  = f.label :pronouns, "Character Pronouns"
+  = f.text_field :pronouns
+.form-row
   = f.label :user, "Player"
 .form-row
   = f.label :true_self
