--- a/app/views/data_entry/advantages/index.slim
+++ b/app/views/data_entry/advantages/index.slim
@@ -12,8 +12,10 @@ h2 Advantages
     tbody
       - @advantages.each do |advantage|
         tr
-          td link_to advantage.name, data_entry_advantage_path(advantage)
-          td link_to "Edit", edit_data_entry_advantage_path(advantage)
+          td
+            = link_to advantage.name, data_entry_advantage_path(advantage)
+          td
+            = link_to "Edit", edit_data_entry_advantage_path(advantage)
           td
             = form_tag(data_entry_advantage_path(advantage), method: 'DELETE') do
               = button_tag "Delete", type: 'submit', onClick: 'return confirm("Are you sure you want to delete this advantage?");', class: 'button'
