--- a/app/views/data_entry/challenges/index.slim
+++ b/app/views/data_entry/challenges/index.slim
@@ -12,8 +12,10 @@ h2 Challenges
     tbody
       - @challenges.each do |challenge|
         tr
-          td link_to challenge.name, data_entry_challenge_path(challenge)
-          td link_to "Edit", edit_data_entry_challenge_path(challenge)
+          td
+            = link_to challenge.name, data_entry_challenge_path(challenge)
+          td
+            = link_to "Edit", edit_data_entry_challenge_path(challenge)
           td
             = form_tag(data_entry_challenge_path(challenge), method: 'DELETE') do
               = button_tag "Delete", type: 'submit', onClick: 'return confirm("Are you sure you want to delete this challenge?");', class: 'button'
