--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
 @import "font-awesome";
 @import "froala_editor.min.css";
 @import "froala_style.min.css";
+@import 'plugins/char_counter.min.css';
 
 @import "_variables.scss";
 @import "hamburgers/hamburgers.scss";
