add basic datatables support

--- a/app/views/data_entry/advantages/index.slim
+++ b/app/views/data_entry/advantages/index.slim
@@ -3,7 +3,7 @@ h2 Advantages
 = link_to "New Advantage", new_data_entry_advantage_path, class: 'button'
 
 - if @advantages.present?
-  table
+  table.table
     thead
       tr
         th Name
