--- a/app/views/data_entry/challenges/index.slim
+++ b/app/views/data_entry/challenges/index.slim
@@ -3,7 +3,7 @@ h2 Challenges
 = link_to "New Challenge", new_data_entry_challenge_path, class: 'button'
 
 - if @challenges.present?
-  table
+  table.table
     thead
       tr
         th Name
