--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header class="header">
-  <h1>AAL Character System</h1>
+  <h1><a href="/">AAL Character System</a></h1>
   <nav>
     <ul>
       <li class="parent"><span>My Characters</span>
