--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -2,6 +2,15 @@ header {
   background-color: $green;
   color: $white;
 
+  h1 {
+    margin: 0;
+    line-height: 1;
+    a {
+      color: $white;
+      text-decoration: none;
+    }
+  }
+
   nav {
     ul {
       list-style: none;
