--- a/app/views/admin/settings/index.slim
+++ b/app/views/admin/settings/index.slim
@@ -1,10 +1,9 @@
 h2 Update Storytellers
 
-= form_tag '/admin/settings', method: :put do
+= form_tag '/admin', method: :post do
   - @users.each do |user|
     .form-row
-      = fields_for :user, user do |f|
-        = f.label :name, user.name
-        = f.check_box :is_storyteller
+      = label_tag "users_#{user.id}_is_storyteller", user.name
+      = check_box_tag "users[]", user.id, user.is_storyteller
 
   = submit_tag "Update", class: 'button'
