fix adding user ID to new characters; add player name to character sheet

--- a/app/views/characters/_form.slim
+++ b/app/views/characters/_form.slim
@@ -6,6 +6,8 @@
   = f.text_field :pronouns
 .form-row
   = f.label :user, "Player"
+  span
+    = @player.name
 .form-row
   = f.label :true_self
   = collection_select(:character, :true_self_id, TrueSelf.all, :id, :name, {})
