--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,4 +25,8 @@
 @import "_base.scss";
 @import "_buttons.scss";
 @import "_header.scss";
-@import "_form.scss"
+@import "_form.scss";
+
+.template {
+  display: none;
+}
