--- a/app/views/storytellers/dashboard/index.slim
+++ b/app/views/storytellers/dashboard/index.slim
@@ -1,1 +1,11 @@
 h2 Dashboard
+
+ul
+  li
+    = link_to "Advantages", storytellers_advantages_path
+  li
+    = link_to "Challenges", storytellers_challenges_path
+  li
+    = link_to "True Selves", storytellers_true_selves_path
+  li
+    = link_to "Questionnaire", '/storytellers/questionnaire'
