Start implementing system to add advantages to character sheet

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,7 @@
 @import "_buttons.scss";
 @import "_header.scss";
 @import "_form.scss";
+@import "_character.scss";
 
 .template {
   display: none;
