--- a/app/views/characters/show.slim
+++ b/app/views/characters/show.slim
@@ -75,7 +75,7 @@ ul#advantages
       p.name
         = chc.challenge.name
       p.desc
-        = cha.challenge.description
+        = chc.challenge.description
 
 h3 Derived Stats
 
