--- a/app/assets/stylesheets/_character.scss
+++ b/app/assets/stylesheets/_character.scss
@@ -11,12 +11,13 @@
   display: none;
 
   .modal {
-    max-width: 100%;
+    max-width: 96%;
     width: 500px;
     background-color: $white;
     border-radius: 5px;
     box-shadow: 0 0 6px rgba(0,0,0,.5);
-    overflow: hidden;
+    overflow: auto;
+    max-height: 96vh;
 
     .header {
       background-color: $green;
