Change to more correct prop() vs attr()

--- a/app/views/characters/_form.slim
+++ b/app/views/characters/_form.slim
@@ -120,7 +120,6 @@ javascript:
     if ($(e.target).hasClass('dot')) {
       $(this).addClass('selected').prevAll().addClass('selected');
       $(this).nextAll().removeClass('selected');
-      $(this).find('input').attr("checked", "checked");
-      $(this).find('input').change();
+      $(this).find('input').prop("checked", "checked");
     }
   });
