Add public blurb field to character sheet

--- a/app/views/characters/_form.slim
+++ b/app/views/characters/_form.slim
@@ -108,6 +108,10 @@ h3 Derived Stats
   = f.label :initiative
   = f.number_field :initiative
 
+h3 Public Blurb
+
+= f.text_area :public_blurb
+
 h3 Questionnaire
 
 - if @questionnaire_items.present?
