--- a/app/assets/stylesheets/utilities/_typography.scss
+++ b/app/assets/stylesheets/utilities/_typography.scss
@@ -11,3 +11,25 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: $header-font;
 }
+
+h1 {
+  font-size: 36px;
+  line-height: 36px;
+}
+
+h2 {
+  font-size: 32px;
+}
+
+h3 {
+  font-size: 24px;
+}
+
+h4, h5, h6 {
+  font-size: 18px;
+}
+
+a {
+  color: $green;
+  text-decoration: underline;
+}
