--- a/app/views/characters/wizard.slim
+++ b/app/views/characters/wizard.slim
@@ -21,14 +21,14 @@
         .question
           .question-text
             = question.question
-            = text_area_tag "character[questionnaire_answers][][answer]"
-            = hidden_field_tag "character[questionnaire_answers][][id]"
+          = text_area_tag "character[questionnaire_answers][][answer]"
+          = hidden_field_tag "character[questionnaire_answers][][id]"
           = hidden_field_tag "character[questionnaire_answers][][questionnaire_item_id]", question.id
 
   = hidden_field_tag "wizard_current", "1"
-  = hidden_field_tag "wizard", @questionnaire.length > 1 ? '2', 'basics'
+  = hidden_field_tag "wizard", @questionnaire.length > 1 ? '2' : 'basics'
 
-  = hidden_field_tag "action", "", id: 'form-action'
+  = hidden_field_tag "formaction", "", id: 'form-action'
   = f.submit "Save", id: 'save'
   = f.submit "Save and Continue", id: 'save-continue'
   = f.submit "Save & Skip to Full Sheet", id: 'save-skip'
